--- a/views/collector/profile.ejs
+++ b/views/collector/profile.ejs
@@ -358,17 +358,17 @@
                     
                     <div class="stats-grid">
                         <div class="stat-card">
-                            <p class="stat-value">0</p>
+                            <p class="stat-value"><%= statistics.totalPayments.toLocaleString('id-ID') %></p>
                             <p class="stat-label">Total Pembayaran</p>
                         </div>
                         
                         <div class="stat-card">
-                            <p class="stat-value">0</p>
+                            <p class="stat-value"><%= statistics.totalCommission.toLocaleString('id-ID') %></p>
                             <p class="stat-label">Komisi Diterima</p>
                         </div>
                         
                         <div class="stat-card">
-                            <p class="stat-value">0</p>
+                            <p class="stat-value"><%= statistics.customersServed %></p>
                             <p class="stat-label">Pelanggan Dilayani</p>
                         </div>
                     </div>
