--- a/views/partials/admin-responsive-sidebar.ejs
+++ b/views/partials/admin-responsive-sidebar.ejs
@@ -9,7 +9,7 @@
             <div class="d-flex flex-column ms-2">
                 <span class="navbar-brand mb-0">GEMBOK Admin</span>
                 <small class="text-light opacity-75">
-                    <%= typeof versionInfo !== 'undefined' ? versionInfo.version : 'v1.0.0' %>
+                    <%= typeof versionInfo !== 'undefined' ? versionInfo.version : 'v2.1.2' %>
                 </small>
             </div>
         </div>
@@ -37,7 +37,7 @@
             </h6>
             <div class="version-badge-small">
                 <span class="badge <%= typeof versionBadge !== 'undefined' ? versionBadge.class : 'badge-secondary' %>">
-                    <%= typeof versionBadge !== 'undefined' ? versionBadge.text : 'v1.0.0' %>
+                    <%= typeof versionBadge !== 'undefined' ? versionBadge.text : 'v2.1.2' %>
                 </span>
             </div>
         </div>
@@ -122,7 +122,7 @@
         <div class="version-details">
             <div class="version-item">
                 <span class="version-label">Version:</span>
-                <span class="version-value"><%= typeof versionInfo !== 'undefined' ? versionInfo.version : '1.0.0' %></span>
+                <span class="version-value"><%= typeof versionInfo !== 'undefined' ? versionInfo.version : '2.1.2' %></span>
             </div>
             <div class="version-item">
                 <span class="version-label">Build:</span>
@@ -135,11 +135,19 @@
         </div>
         <div class="version-badge">
             <span class="badge <%= typeof versionBadge !== 'undefined' ? versionBadge.class : 'badge-secondary' %>">
-                <%= typeof versionBadge !== 'undefined' ? versionBadge.text : 'v1.0.0' %>
+                <%= typeof versionBadge !== 'undefined' ? versionBadge.text : 'v2.1.2' %>
             </span>
+        </div>
+        <div class="mt-2">
+            <button id="checkUpdateBtn" class="btn btn-outline-info btn-sm w-100">
+                <i class="bi bi-cloud-arrow-down me-1"></i>Cek Update
+            </button>
+            <div id="updateResult" class="mt-2"></div>
         </div>
     </div>
 </nav>
+
+<script src="/js/version-check.js"></script>
 
 <style>
 /* Mobile Top Navbar */
